step4-virtual-hosting/002-wordpress/004-wordpress-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wordpress
  labels:
    app: wordpress
spec:
  selector:
    matchLabels:
      app: wordpress
  template:
    metadata:
      labels:
        app: wordpress
    spec:
      containers:
      - image: wordpress:apache
        name: wordpress
        ports:
        - containerPort: 80
          name: http
        - containerPort: 443
          name: https
        volumeMounts:
        - name: wordpress-html
          mountPath: /var/www/html
      volumes:
      - name: wordpress-html
        persistentVolumeClaim:
          claimName: wordpress-html
