step4-virtual-hosting/002-wordpress/006-wordpress-ingress.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: wordpress
  labels:
    app: wordpress
spec:
  rules:
  - host: wordpress.default.test
    http:
      paths:
      - path: /
        backend:
          serviceName: wordpress
          servicePort: http
